# agentic-radar

./: .gitignore  README.md  pyproject.toml
.claude/agents/: blog-writer.md  content-analyzer.md  github-collector.md  hackernews-collector.md  reddit-collector.md  summarizer.md  youtube-collector.md
.claude/commands/: digest.md  ingest.md  publish.md  radar-status.md
.claude/skills/daily-digest/: SKILL.md
.claude/skills/ingest-url/: SKILL.md
.claude/skills/publish-blog/: SKILL.md
.github/workflows/: daily_update.yml
config/: schedule.yml  sources.yml  tags.yml
content/blog/: README.md
content/raw/2026-05-24/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-05-25/: blogs.json  github.json  hackernews.json
content/raw/2026-05-26/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-05-27/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-05-28/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-05-29/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-05-30/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-05-31/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-06-01/: blogs.json  github.json  hackernews.json  youtube.json
content/raw/2026-06-02/: blogs.json  (+3 more)
content/sources/: 2026-05-23-manual-handoff-skill-matt-pocock.md  README.md
scripts/collectors/: blogs_rss.py  github_trending.py  hackernews.py  reddit_feed.py  youtube_feed.py
scripts/utils/: common.py  fetch_url.py
(+115 files in other folders)
