[project]
name = "agentic-radar"
version = "0.1.0"
description = "Veille technologique agentique pilotée par Claude Code"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.3",
    "readability-lxml>=0.8.1",
    "python-slugify>=8.0.4",
]

[tool.uv]
package = false
